samples/_failures_safe/1761639597_fb1fe2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_88822d69.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_88822d69.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
